# AdversarialRoadModel

./: LICENSE  README.md
DiscKernelAlgo/: CMakeLists.txt  README.md  car.json  install.sh  main.cpp  run.sh  types.cpp  types.h
DiscKernelAlgo/Algo/: algo.cpp  algo.h
DiscKernelAlgo/Data/: LoadKN.m
DiscKernelAlgo/Grid/: grid.h
DiscKernelAlgo/Model/: model.cpp  model.h
LearningSafeSets/: config.json  run.sh  train.py
LearningSafeSets/DataLoader/: DataLoader.py
LearningSafeSets/Model/: SafeSet.py
LearningSafeSets/Trainer/: Trainer.py
LearningSafeSets/Validation/: Validation.py
